# http-smuggler

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  issues.md  pyproject.toml  requirements.txt  setup.ps1  setup.py  setup.sh  start.ps1  start.sh  ubus
docs/: ARCHITECTURE.md  TECHNICAL_REFERENCE.md  VARIANTS.md
http_smuggler/: __init__.py  main.py
http_smuggler/analysis/: __init__.py  reporter.py
http_smuggler/core/: __init__.py  config.py  engine.py  exceptions.py  models.py
http_smuggler/crawler/: __init__.py  spider.py
http_smuggler/detection/: __init__.py  differential.py  protocol.py  timing.py
http_smuggler/exploits/: __init__.py  exploit_runner.py  listener_manager.py
http_smuggler/network/: __init__.py  callback_server.py  http2_client.py  raw_socket.py
http_smuggler/payloads/: __init__.py  generator.py  obfuscation.py
http_smuggler/payloads/advanced/: __init__.py  client_side.py  pause_based.py
http_smuggler/payloads/classic/: __init__.py  cl_te.py  te_cl.py  te_te.py
http_smuggler/payloads/http2/: __init__.py  crlf_injection.py  h2_cl.py  h2_te.py
http_smuggler/payloads/websocket/: __init__.py  version_smuggle.py
http_smuggler/utils/: __init__.py  helpers.py  logging.py
tests/: __init__.py  conftest.py  test_detection.py  test_payloads.py
