[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "http-smuggler"
version = "1.0.0"
description = "Comprehensive HTTP Request Smuggling Detection & Exploitation Tool"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "HTTP-Smuggler Contributors"}
]
keywords = [
    "security",
    "http",
    "smuggling",
    "request-smuggling",
    "penetration-testing",
    "vulnerability-scanner",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aiohttp>=3.9.0",
    "aiofiles>=23.0.0",
    "h2>=4.1.0",
    "hyperframe>=6.0.1",
    "hpack>=4.0.0",
    "httpx[http2]>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.1",
    "structlog>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]

[project.scripts]
http-smuggler = "http_smuggler.main:cli"

[project.urls]
Homepage = "https://github.com/yourusername/http-smuggler"
Documentation = "https://github.com/yourusername/http-smuggler#readme"
Repository = "https://github.com/yourusername/http-smuggler"
Issues = "https://github.com/yourusername/http-smuggler/issues"

[tool.setuptools.packages.find]
exclude = ["tests*", "docs*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

